Fix vertical alignment of homepage items

--- a/media.css
+++ b/media.css
@@ -61,7 +61,6 @@
 		margin: 3em auto 0;
 		width: 85%;
 		flex-flow: row;
-		align-items: center;
 	}
 
 	#about-me {
